[package]
name = "rusty-marvin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
dotenv = "0.15.0"
serenity = "0.11.5"
sys-info = "0.9.1"
tokio = { version = "1.20.1", features=["rt-multi-thread"] }
